--- a/src/views/report/list.html
+++ b/src/views/report/list.html
@@ -429,12 +429,12 @@
             })
         }
 
-        function getClList(school_id, grade_no, num) {
+        function getClList(school_id, grade_id, num) {
 
             let reqData = {
                 class_name: '',
                 class_no: '',
-                grade_no,
+                grade_id,
                 school_id,
                 page: '1',
                 epage: '100'
